// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skeleton renders correctly with type="block" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-bgbcvp-StyledContainer {
  position: relative;
  display: block;
  width: 100%;
  overflow: hidden;
  cursor: progress;
}

.cache-1nd3dqf-StyledList {
  min-height: 200px;
  width: 100%;
  height: 100%;
  padding: 16px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  margin: 0;
}

.cache-1nd3dqf-StyledList>.eomzb311:not(:last-child) {
  border-bottom: 1px solid #e6e9f0;
}

.cache-1udri31-StyledLine {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 24px 16px;
}

.cache-1jhrphz-IconSkeleton {
  margin-right: 8px;
  width: 32px;
  height: 32px;
  min-width: 32px;
  border-radius: 12px;
  background-color: #d4dae7;
}

.cache-1r88wor-Line {
  height: 12px;
  width: 120px;
  max-width: 100%;
  border-radius: 10px;
  background-color: #d4dae7;
}

.cache-q3qai6-StyledDiv {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      #ffffff00,
      #ffffff4D,
      #ffffff66,
      #ffffff4D,
      #ffffff00
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .cache-q3qai6-StyledDiv {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    class="cache-bgbcvp-StyledContainer e181dehd1"
  >
    <ul
      class="cache-1nd3dqf-StyledList eomzb310"
    >
      <li
        class="cache-1udri31-StyledLine eomzb311"
      >
        <div
          class="cache-1jhrphz-IconSkeleton e19udb630"
        />
        <div
          class="cache-1r88wor-Line e16zi9h40"
        />
      </li>
      <li
        class="cache-1udri31-StyledLine eomzb311"
      >
        <div
          class="cache-1jhrphz-IconSkeleton e19udb630"
        />
        <div
          class="cache-1r88wor-Line e16zi9h40"
        />
      </li>
      <li
        class="cache-1udri31-StyledLine eomzb311"
      >
        <div
          class="cache-1jhrphz-IconSkeleton e19udb630"
        />
        <div
          class="cache-1r88wor-Line e16zi9h40"
        />
      </li>
    </ul>
    <div
      class="cache-q3qai6-StyledDiv e181dehd0"
    />
  </div>
</DocumentFragment>
`;

exports[`Skeleton renders correctly with type="blocks" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-bgbcvp-StyledContainer {
  position: relative;
  display: block;
  width: 100%;
  overflow: hidden;
  cursor: progress;
}

.cache-sprtbs-StyledContainer {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 16px;
}

.cache-2szx0p-Block {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  overflow: hidden;
}

.cache-1jhrphz-IconSkeleton {
  margin-right: 8px;
  width: 32px;
  height: 32px;
  min-width: 32px;
  border-radius: 12px;
  background-color: #d4dae7;
}

.cache-1r88wor-Line {
  height: 12px;
  width: 120px;
  max-width: 100%;
  border-radius: 10px;
  background-color: #d4dae7;
}

.cache-q3qai6-StyledDiv {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      #ffffff00,
      #ffffff4D,
      #ffffff66,
      #ffffff4D,
      #ffffff00
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .cache-q3qai6-StyledDiv {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    class="cache-bgbcvp-StyledContainer e181dehd1"
  >
    <div
      class="cache-sprtbs-StyledContainer ellyxki1"
    >
      <div
        class="cache-2szx0p-Block ellyxki0"
      >
        <div
          class="cache-1jhrphz-IconSkeleton e19udb630"
        />
        <div
          class="cache-1r88wor-Line e16zi9h40"
        />
      </div>
      <div
        class="cache-2szx0p-Block ellyxki0"
      >
        <div
          class="cache-1jhrphz-IconSkeleton e19udb630"
        />
        <div
          class="cache-1r88wor-Line e16zi9h40"
        />
      </div>
      <div
        class="cache-2szx0p-Block ellyxki0"
      >
        <div
          class="cache-1jhrphz-IconSkeleton e19udb630"
        />
        <div
          class="cache-1r88wor-Line e16zi9h40"
        />
      </div>
      <div
        class="cache-2szx0p-Block ellyxki0"
      >
        <div
          class="cache-1jhrphz-IconSkeleton e19udb630"
        />
        <div
          class="cache-1r88wor-Line e16zi9h40"
        />
      </div>
      <div
        class="cache-2szx0p-Block ellyxki0"
      >
        <div
          class="cache-1jhrphz-IconSkeleton e19udb630"
        />
        <div
          class="cache-1r88wor-Line e16zi9h40"
        />
      </div>
      <div
        class="cache-2szx0p-Block ellyxki0"
      >
        <div
          class="cache-1jhrphz-IconSkeleton e19udb630"
        />
        <div
          class="cache-1r88wor-Line e16zi9h40"
        />
      </div>
      <div
        class="cache-2szx0p-Block ellyxki0"
      >
        <div
          class="cache-1jhrphz-IconSkeleton e19udb630"
        />
        <div
          class="cache-1r88wor-Line e16zi9h40"
        />
      </div>
      <div
        class="cache-2szx0p-Block ellyxki0"
      >
        <div
          class="cache-1jhrphz-IconSkeleton e19udb630"
        />
        <div
          class="cache-1r88wor-Line e16zi9h40"
        />
      </div>
    </div>
    <div
      class="cache-q3qai6-StyledDiv e181dehd0"
    />
  </div>
</DocumentFragment>
`;

exports[`Skeleton renders correctly with type="box" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-bgbcvp-StyledContainer {
  position: relative;
  display: block;
  width: 100%;
  overflow: hidden;
  cursor: progress;
}

.cache-sprtbs-StyledContainer {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 16px;
}

.cache-1eti1qk-Block {
  height: 130px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: space-evenly;
  -ms-flex-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  justify-content: space-evenly;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  overflow: hidden;
}

.cache-1jhrphz-IconSkeleton {
  margin-right: 8px;
  width: 32px;
  height: 32px;
  min-width: 32px;
  border-radius: 12px;
  background-color: #d4dae7;
}

.cache-1r88wor-Line {
  height: 12px;
  width: 120px;
  max-width: 100%;
  border-radius: 10px;
  background-color: #d4dae7;
}

.cache-q3qai6-StyledDiv {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      #ffffff00,
      #ffffff4D,
      #ffffff66,
      #ffffff4D,
      #ffffff00
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .cache-q3qai6-StyledDiv {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    class="cache-bgbcvp-StyledContainer e181dehd1"
  >
    <div
      class="cache-sprtbs-StyledContainer ev9nufa1"
    >
      <div
        class="cache-1eti1qk-Block ev9nufa0"
      >
        <div
          class="cache-1jhrphz-IconSkeleton e19udb630"
        />
        <div
          class="cache-1r88wor-Line e16zi9h40"
        />
      </div>
      <div
        class="cache-1eti1qk-Block ev9nufa0"
      >
        <div
          class="cache-1jhrphz-IconSkeleton e19udb630"
        />
        <div
          class="cache-1r88wor-Line e16zi9h40"
        />
      </div>
      <div
        class="cache-1eti1qk-Block ev9nufa0"
      >
        <div
          class="cache-1jhrphz-IconSkeleton e19udb630"
        />
        <div
          class="cache-1r88wor-Line e16zi9h40"
        />
      </div>
      <div
        class="cache-1eti1qk-Block ev9nufa0"
      >
        <div
          class="cache-1jhrphz-IconSkeleton e19udb630"
        />
        <div
          class="cache-1r88wor-Line e16zi9h40"
        />
      </div>
      <div
        class="cache-1eti1qk-Block ev9nufa0"
      >
        <div
          class="cache-1jhrphz-IconSkeleton e19udb630"
        />
        <div
          class="cache-1r88wor-Line e16zi9h40"
        />
      </div>
      <div
        class="cache-1eti1qk-Block ev9nufa0"
      >
        <div
          class="cache-1jhrphz-IconSkeleton e19udb630"
        />
        <div
          class="cache-1r88wor-Line e16zi9h40"
        />
      </div>
      <div
        class="cache-1eti1qk-Block ev9nufa0"
      >
        <div
          class="cache-1jhrphz-IconSkeleton e19udb630"
        />
        <div
          class="cache-1r88wor-Line e16zi9h40"
        />
      </div>
      <div
        class="cache-1eti1qk-Block ev9nufa0"
      >
        <div
          class="cache-1jhrphz-IconSkeleton e19udb630"
        />
        <div
          class="cache-1r88wor-Line e16zi9h40"
        />
      </div>
    </div>
    <div
      class="cache-q3qai6-StyledDiv e181dehd0"
    />
  </div>
</DocumentFragment>
`;

exports[`Skeleton renders correctly with type="donut" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-bgbcvp-StyledContainer {
  position: relative;
  display: block;
  width: 100%;
  overflow: hidden;
  cursor: progress;
}

.cache-a1981g-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-1mvslid-StyledSVG {
  height: 206px;
  width: 206px;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

.cache-1ebk3po-StyledCircle {
  transform-origin: 50% 50%;
  stroke: #d4dae7;
  stroke-width: 18;
  stroke-linecap: butt;
  fill: none;
}

.cache-1a6m9ou-LineList {
  display: grid;
  list-style: none;
  gap: 16px;
}

.cache-1r88wor-Line {
  height: 12px;
  width: 120px;
  max-width: 100%;
  border-radius: 10px;
  background-color: #d4dae7;
}

.cache-q3qai6-StyledDiv {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      #ffffff00,
      #ffffff4D,
      #ffffff66,
      #ffffff4D,
      #ffffff00
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .cache-q3qai6-StyledDiv {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    class="cache-bgbcvp-StyledContainer e181dehd1"
  >
    <div
      class="cache-a1981g-StyledContainer exw3d033"
    >
      <svg
        class="cache-1mvslid-StyledSVG exw3d032"
      >
        <circle
          class="cache-1ebk3po-StyledCircle exw3d031"
          cx="103"
          cy="103"
          r="90"
        />
      </svg>
      <ul
        class="cache-1a6m9ou-LineList exw3d030"
      >
        <li>
          <div
            class="cache-1r88wor-Line e16zi9h40"
          />
        </li>
        <li>
          <div
            class="cache-1r88wor-Line e16zi9h40"
          />
        </li>
        <li>
          <div
            class="cache-1r88wor-Line e16zi9h40"
          />
        </li>
        <li>
          <div
            class="cache-1r88wor-Line e16zi9h40"
          />
        </li>
      </ul>
    </div>
    <div
      class="cache-q3qai6-StyledDiv e181dehd0"
    />
  </div>
</DocumentFragment>
`;

exports[`Skeleton renders correctly with type="line" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-bgbcvp-StyledContainer {
  position: relative;
  display: block;
  width: 100%;
  overflow: hidden;
  cursor: progress;
}

.cache-1r88wor-Line {
  height: 12px;
  width: 120px;
  max-width: 100%;
  border-radius: 10px;
  background-color: #d4dae7;
}

.cache-q3qai6-StyledDiv {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      #ffffff00,
      #ffffff4D,
      #ffffff66,
      #ffffff4D,
      #ffffff00
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .cache-q3qai6-StyledDiv {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    class="cache-bgbcvp-StyledContainer e181dehd1"
  >
    <div
      class="cache-1r88wor-Line e16zi9h40"
    />
    <div
      class="cache-q3qai6-StyledDiv e181dehd0"
    />
  </div>
</DocumentFragment>
`;

exports[`Skeleton renders correctly with type="list" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-bgbcvp-StyledContainer {
  position: relative;
  display: block;
  width: 100%;
  overflow: hidden;
  cursor: progress;
}

.cache-btk4pg-StyledList {
  list-style: none;
  padding: 0;
  margin: 0;
}

.cache-btk4pg-StyledList>.e1550o002:nth-of-type(even) {
  background-color: #f6f6f8;
}

.cache-1ldrf1m-StyledItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 48px;
  padding: 4px 8px;
}

.cache-vmfh4y-StyledLine {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1r88wor-Line {
  height: 12px;
  width: 120px;
  max-width: 100%;
  border-radius: 10px;
  background-color: #d4dae7;
}

.cache-q3qai6-StyledDiv {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      #ffffff00,
      #ffffff4D,
      #ffffff66,
      #ffffff4D,
      #ffffff00
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .cache-q3qai6-StyledDiv {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    class="cache-bgbcvp-StyledContainer e181dehd1"
  >
    <ul
      class="cache-btk4pg-StyledList e1550o000"
    >
      <li
        class="cache-1ldrf1m-StyledItem e1550o002"
      >
        <div
          class="cache-vmfh4y-StyledLine e1550o001"
        >
          <div
            class="cache-1r88wor-Line e16zi9h40"
          />
        </div>
        <div
          class="cache-vmfh4y-StyledLine e1550o001"
        >
          <div
            class="cache-1r88wor-Line e16zi9h40"
          />
        </div>
        <div
          class="cache-vmfh4y-StyledLine e1550o001"
        >
          <div
            class="cache-1r88wor-Line e16zi9h40"
          />
        </div>
      </li>
      <li
        class="cache-1ldrf1m-StyledItem e1550o002"
      >
        <div
          class="cache-vmfh4y-StyledLine e1550o001"
        >
          <div
            class="cache-1r88wor-Line e16zi9h40"
          />
        </div>
        <div
          class="cache-vmfh4y-StyledLine e1550o001"
        >
          <div
            class="cache-1r88wor-Line e16zi9h40"
          />
        </div>
        <div
          class="cache-vmfh4y-StyledLine e1550o001"
        >
          <div
            class="cache-1r88wor-Line e16zi9h40"
          />
        </div>
      </li>
      <li
        class="cache-1ldrf1m-StyledItem e1550o002"
      >
        <div
          class="cache-vmfh4y-StyledLine e1550o001"
        >
          <div
            class="cache-1r88wor-Line e16zi9h40"
          />
        </div>
        <div
          class="cache-vmfh4y-StyledLine e1550o001"
        >
          <div
            class="cache-1r88wor-Line e16zi9h40"
          />
        </div>
        <div
          class="cache-vmfh4y-StyledLine e1550o001"
        >
          <div
            class="cache-1r88wor-Line e16zi9h40"
          />
        </div>
      </li>
    </ul>
    <div
      class="cache-q3qai6-StyledDiv e181dehd0"
    />
  </div>
</DocumentFragment>
`;

exports[`Skeleton renders correctly with type="slider" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-bgbcvp-StyledContainer {
  position: relative;
  display: block;
  width: 100%;
  overflow: hidden;
  cursor: progress;
}

.cache-1ibkrfq-StyledContainer {
  height: 277px;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 16px;
  overflow: auto;
}

.cache-1v2rm0w-StyledCard {
  border: 1px solid #d4dae7;
  border-radius: 4px;
  width: 239px;
  height: 261px;
  overflow: hidden;
}

.cache-1qdcwka-StyledBanner {
  border: 1px solid #d4dae7;
  background-color: #d4dae7;
  width: 100%;
  height: 33%;
}

.cache-q3qai6-StyledDiv {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      #ffffff00,
      #ffffff4D,
      #ffffff66,
      #ffffff4D,
      #ffffff00
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .cache-q3qai6-StyledDiv {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    class="cache-bgbcvp-StyledContainer e181dehd1"
  >
    <div
      class="cache-1ibkrfq-StyledContainer e10u8i0l2"
    >
      <div
        class="cache-1v2rm0w-StyledCard e10u8i0l1"
      >
        <div
          class="cache-1qdcwka-StyledBanner e10u8i0l0"
        />
      </div>
      <div
        class="cache-1v2rm0w-StyledCard e10u8i0l1"
      >
        <div
          class="cache-1qdcwka-StyledBanner e10u8i0l0"
        />
      </div>
      <div
        class="cache-1v2rm0w-StyledCard e10u8i0l1"
      >
        <div
          class="cache-1qdcwka-StyledBanner e10u8i0l0"
        />
      </div>
      <div
        class="cache-1v2rm0w-StyledCard e10u8i0l1"
      >
        <div
          class="cache-1qdcwka-StyledBanner e10u8i0l0"
        />
      </div>
    </div>
    <div
      class="cache-q3qai6-StyledDiv e181dehd0"
    />
  </div>
</DocumentFragment>
`;

exports[`Skeleton renders default variant 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-bgbcvp-StyledContainer {
  position: relative;
  display: block;
  width: 100%;
  overflow: hidden;
  cursor: progress;
}

.cache-sprtbs-StyledContainer {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 16px;
}

.cache-2szx0p-Block {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  overflow: hidden;
}

.cache-1jhrphz-IconSkeleton {
  margin-right: 8px;
  width: 32px;
  height: 32px;
  min-width: 32px;
  border-radius: 12px;
  background-color: #d4dae7;
}

.cache-1r88wor-Line {
  height: 12px;
  width: 120px;
  max-width: 100%;
  border-radius: 10px;
  background-color: #d4dae7;
}

.cache-q3qai6-StyledDiv {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      #ffffff00,
      #ffffff4D,
      #ffffff66,
      #ffffff4D,
      #ffffff00
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .cache-q3qai6-StyledDiv {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    class="cache-bgbcvp-StyledContainer e181dehd1"
  >
    <div
      class="cache-sprtbs-StyledContainer ellyxki1"
    >
      <div
        class="cache-2szx0p-Block ellyxki0"
      >
        <div
          class="cache-1jhrphz-IconSkeleton e19udb630"
        />
        <div
          class="cache-1r88wor-Line e16zi9h40"
        />
      </div>
      <div
        class="cache-2szx0p-Block ellyxki0"
      >
        <div
          class="cache-1jhrphz-IconSkeleton e19udb630"
        />
        <div
          class="cache-1r88wor-Line e16zi9h40"
        />
      </div>
      <div
        class="cache-2szx0p-Block ellyxki0"
      >
        <div
          class="cache-1jhrphz-IconSkeleton e19udb630"
        />
        <div
          class="cache-1r88wor-Line e16zi9h40"
        />
      </div>
      <div
        class="cache-2szx0p-Block ellyxki0"
      >
        <div
          class="cache-1jhrphz-IconSkeleton e19udb630"
        />
        <div
          class="cache-1r88wor-Line e16zi9h40"
        />
      </div>
      <div
        class="cache-2szx0p-Block ellyxki0"
      >
        <div
          class="cache-1jhrphz-IconSkeleton e19udb630"
        />
        <div
          class="cache-1r88wor-Line e16zi9h40"
        />
      </div>
      <div
        class="cache-2szx0p-Block ellyxki0"
      >
        <div
          class="cache-1jhrphz-IconSkeleton e19udb630"
        />
        <div
          class="cache-1r88wor-Line e16zi9h40"
        />
      </div>
      <div
        class="cache-2szx0p-Block ellyxki0"
      >
        <div
          class="cache-1jhrphz-IconSkeleton e19udb630"
        />
        <div
          class="cache-1r88wor-Line e16zi9h40"
        />
      </div>
      <div
        class="cache-2szx0p-Block ellyxki0"
      >
        <div
          class="cache-1jhrphz-IconSkeleton e19udb630"
        />
        <div
          class="cache-1r88wor-Line e16zi9h40"
        />
      </div>
    </div>
    <div
      class="cache-q3qai6-StyledDiv e181dehd0"
    />
  </div>
</DocumentFragment>
`;
